--- a/webpage-checklist.html
+++ b/webpage-checklist.html
@@ -5,13 +5,14 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
-		<!-- Bootstrap CSS -->
+        <!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/styles.css">
 		<title>Website Checklist</title>
 	</head>
 	<body>
-		<h1>WEBPAGE CHECKLIST ( See https://codeburst.io/the-front-end-checklist-8b2292fdda44 for more detail)</h1>
+		<h1>WEBPAGE CHECKLIST</h1>
+		( See https://codeburst.io/the-front-end-checklist-8b2292fdda44 for more detail)
 		<h3>HTML</h3>
 		<h5>doctype </h5>
 		<!doctype html>
@@ -90,7 +91,7 @@
 				<h5>robots.txt: </h5>
 				The robots.txt is not blocking webpages.
 			</body>
-			<script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
-			<script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-			<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 		</html>
