--- a/bootstrap-cheatsheet.html
+++ b/bootstrap-cheatsheet.html
@@ -11,7 +11,7 @@
 		<title>Bootstrap Cheatsheet</title>
 	</head>
 	<body>
-		<<h1>bootstrap classes</h1>
+		<h1>bootstrap classes</h1>
 		<ul>
 			<li>align-items-center</li>
 			<li>align-self-center</li>
