updated web pages

--- a/bootstrap-cheatsheet.html
+++ b/bootstrap-cheatsheet.html
@@ -5,37 +5,56 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/styles.css">
+		<!-- Bootstrap CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+		<link rel="stylesheet" href="css/styles.css">
 		<title>Bootstrap Cheatsheet</title>
 	</head>
 	<body>
-		<h1>bootstrap classes</h1>
-		<ul>
-			<li>align-items-center</li>
-			<li>align-self-center</li>
-			<li>col</li>
-			<li>col-12</li>
-			<li>col-auto</li>
-			<li>col-md</li>
-			<li>col-md-3</li>
-			<li>col-sm-6</li>
-			<li>container</li>
-			<li>d-none</li>
-			<li>d-sm-block</li>
-			<li>footer</li>
-			<li>jumbotron</li>
-			<li>justify-content-center</li>
-			<li>list-unstyled</li>
-			<li>offset-1</li>
-			<li>order-sm-first</li>
-			<li>order-sm-last</li>
-			<li>row</li>
-			<li>text-center</li>
-		</ul>
+		<div class="container">
+			<h1>bootstrap classes</h1>
+			<dl>
+				<dt class="week2">active</dt><dd></dd>
+				<dt class="week1">align-items-center</dt><dd></dd>
+				<dt class="week1">align-self-center</dt><dd></dd>
+				<dt class="week1">bg-primary</dt><dd></dd>
+				<dt class="week2">breadcrumb</dt><dd></dd>
+				<dt class="week2">breadcrumb-item</dt><dd></dd>
+				<dt class="week1">col</dt><dd></dd>
+				<dt class="week1">col-12</dt><dd></dd>
+				<dt class="week1">col-auto</dt><dd></dd>
+				<dt class="week1">col-md</dt><dd></dd>
+				<dt class="week1">col-md-3</dt><dd></dd>
+				<dt class="week1">col-sm-6</dt><dd></dd>
+				<dt class="week2">collapse</dt><dd></dd>
+				<dt class="week1">container</dt><dd></dd>
+				<dt class="week1">d-none</dt><dd></dd>
+				<dt class="week1">d-sm-block</dt><dd></dd>
+				<dt class="week2">fixed-top</dt><dd></dd>
+				<dt class="week1">footer</dt><dd></dd>
+				<dt class="week1">jumbotron</dt><dd></dd>
+				<dt class="week1">justify-content-center</dt><dd></dd>
+				<dt class="week1">list-unstyled</dt><dd></dd>
+				<dt class="week2">mr-auto</dt><dd></dd>
+				<dt class="week2">navbar</dt><dd></dd>
+				<dt class="week2">navbar-brand</dt><dd></dd>
+				<dt class="week2">navbar-collapse</dt><dd></dd>
+				<dt class="week2">navbar-dark</dt><dd></dd>
+				<dt class="week2">navbar-expand-sm</dt><dd></dd>
+				<dt class="week2">nav-item</dt><dd></dd>
+				<dt class="week2">nav-link</dt><dd></dd>
+				<dt class="week2">navbar-nav</dt><dd></dd>
+				<dt class="week2">navbar-toggler</dt><dd></dd>
+				<dt class="week2">navbar-toggler-icon</dt><dd></dd>
+				<dt class="week1">offset-1</dt><dd></dd>
+				<dt class="week1">order-sm-first</dt><dd></dd>
+				<dt class="week1">order-sm-last</dt><dd></dd>
+				<dt class="week1">row</dt><dd></dd>
+				<dt class="week1">text-center</dt><dd></dd>
+			</dl>
+		</div>
 	</body>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </html>
