--- a/index.html
+++ b/index.html
@@ -8,14 +8,20 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="css/styles.css">
-        <title> </title>
+        <title>Daves Stuff</title>
     </head>
     <body>
-        <h1>Dave's Stuff</h1>
-        <h3>Cheat Sheets</h3>
-        <a href="bootstrap-cheatsheet.html">Bootstrap Cheatsheet</a>
-        <h3>Checklists</h3>
-        <a href="webpage-checklist.html">Web Page Checklist</a>
+        <header>
+            <div class="container"><h1>Dave's Stuff</h1></div>
+        </header>
+        <div class="container">
+            <h3>General</h3>
+            <a href="website-design.html">Website Design</a>
+            <h3>Cheat Sheets</h3>
+            <a href="bootstrap-cheatsheet.html">Bootstrap Cheatsheet</a>
+            <h3>Checklists</h3>
+            <a href="webpage-checklist.html">Web Page Checklist</a>
+        </div>
     </body>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
