added scss support and modified styling

--- a/bootstrap-cheatsheet.html
+++ b/bootstrap-cheatsheet.html
@@ -20,6 +20,7 @@
 				<dt class="week1">bg-primary</dt><dd></dd>
 				<dt class="week2">breadcrumb</dt><dd></dd>
 				<dt class="week2">breadcrumb-item</dt><dd></dd>
+				<dt class="week2">btn-group</dt><dd></dd>
 				<dt class="week1">col</dt><dd></dd>
 				<dt class="week1">col-12</dt><dd></dd>
 				<dt class="week1">col-auto</dt><dd></dd>
