--- a/index.html
+++ b/index.html
@@ -7,20 +7,28 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/lightning.css">
         <title>Daves Stuff</title>
     </head>
     <body>
-        <header>
-            <div class="container"><h1>Dave's Stuff</h1></div>
-        </header>
         <div class="container">
-            <h3>General</h3>
-            <a href="website-design.html">Website Design</a>
-            <h3>Cheat Sheets</h3>
-            <a href="bootstrap-cheatsheet.html">Bootstrap Cheatsheet</a>
-            <h3>Checklists</h3>
-            <a href="webpage-checklist.html">Web Page Checklist</a>
+            <header>
+                <h1 class="header">Dave's Stuff</h1>
+            </header>
+        </div>
+        <div class="container">
+            <div class="section">
+                <h3 class="section-header">General</h3>
+                <a href="website-design.html">Website Design</a>
+            </div>
+            <div class="section">
+                <h3 class="section-header">Cheat Sheets</h3>
+                <a href="bootstrap-cheatsheet.html">Bootstrap Cheatsheet</a>
+            </div>
+            <div class="section">
+                <h3 class="section-header">Checklists</h3>
+                <a href="webpage-checklist.html">Web Page Checklist</a>
+            </div>
         </div>
     </body>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
