updated header style

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <div class="container">
             <header>
-                <h1 class="header">Dave's Stuff</h1>
+                <h1 class="header">Dave<span class="header-highlight">'</span>s Stuff</h1>
             </header>
         </div>
         <div class="container">
