added vertical go faster stripe

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="css/lightning.css">
         <title>Daves Stuff</title>
     </head>
-    <body>
+    <body class="d-flex flex-column flex-grow">
         <div class="container">
             <header>
                 <h1 class="header">Dave's Stuff</h1>
@@ -29,6 +29,8 @@
                 <h3 class="section-header">Checklists</h3>
                 <a href="webpage-checklist.html">Web Page Checklist</a>
             </div>
+        </div>
+        <div class="container flex-fill flex-grow vertical-filler">
         </div>
     </body>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
