--- a/bootstrap-cheatsheet.html
+++ b/bootstrap-cheatsheet.html
@@ -12,6 +12,39 @@
 	</head>
 	<body>
 		<div class="container">
+			<h1>sizes</h1>
+				<table>
+					<tr>
+						<th>Size</th>
+						<th>Screen Size</th>
+						<th>Max Container</th>
+					</tr>
+					<tr>
+						<td>XS</td>
+						<td>&lt;576px</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>SM</td>
+						<td>≥576px</td>
+						<td>540px</td>
+					</tr>
+					<tr>
+						<td>MD</td>
+						<td>≥768px</td>
+						<td>720px</td>
+					</tr>
+					<tr>
+						<td>LG</td>
+						<td>≥992px</td>
+						<td>960px</td>
+					</tr>
+					<tr>
+						<td>XL</td>
+						<td>≥1200px</td>
+						<td>1140px</td>
+					</tr>
+				</table>
 			<h1>bootstrap classes</h1>
 			<dl>
 				<dt class="week2">active</dt><dd></dd>
