--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
         <div class="container">
             <div class="section">
                 <h3 class="section-header">General</h3>
-                <a href="website-design.html">Website Design</a>
+                <a href="website-design.html">Website Design</a><br>
+                <a href="npm.html">NPM Resources</a><br>
+                <a href="grunt.html">Grunt Resources</a><br>
+                <a href="prism.html">Prism</a>
             </div>
             <div class="section">
                 <h3 class="section-header">Cheat Sheets</h3>
