loads of changes

--- a/index.html
+++ b/index.html
@@ -19,18 +19,24 @@
         <div class="container">
             <div class="section">
                 <h3 class="section-header">General</h3>
-                <a href="website-design.html">Website Design</a><br>
-                <a href="npm.html">NPM Resources</a><br>
-                <a href="grunt.html">Grunt Resources</a><br>
+                <a href="website-design.html">Website Design</a>
+                <a href="npm.html">NPM Resources</a>
+                <a href="grunt.html">Grunt Resources</a>
                 <a href="prism.html">Prism</a>
             </div>
             <div class="section">
                 <h3 class="section-header">Cheat Sheets</h3>
                 <a href="bootstrap-cheatsheet.html">Bootstrap Cheatsheet</a>
+                <a href="sublime-cheatsheet.html">Sublime Cheatsheet</a>
             </div>
             <div class="section">
                 <h3 class="section-header">Checklists</h3>
                 <a href="webpage-checklist.html">Web Page Checklist</a>
+            </div>
+
+            <div class="section">
+                <h3 class="section-header">...other</h3>
+                <a href="how-did-i-fix.html">How did i fix...</a>
             </div>
         </div>
         <div class="container flex-fill flex-grow vertical-filler">
