--- a/bootstrap-cheatsheet.html
+++ b/bootstrap-cheatsheet.html
@@ -12,13 +12,17 @@
 	</head>
 	<body>
 		<div class="container">
-			<h1>sizes</h1>
-				<table>
-					<tr>
-						<th>Size</th>
-						<th>Screen Size</th>
-						<th>Max Container</th>
-					</tr>
+			<div class="page-title row col-12"> Bootstrap Cheatsheet</div>
+			<div class="row  col-6">
+				<div class="section-title">Media Sizes</div>
+				<table class="table">
+					<thead>
+						<tr>
+							<th scope="col">Size</th>
+							<th scope="col">Screen Size</th>
+							<th scope="col">Max Container</th>
+						</tr>
+					</thead>
 					<tr>
 						<td>XS</td>
 						<td>&lt;576px</td>
@@ -45,47 +49,52 @@
 						<td>1140px</td>
 					</tr>
 				</table>
-			<h1>bootstrap classes</h1>
-			<dl>
-				<dt class="week2">active</dt><dd></dd>
-				<dt class="week1">align-items-center</dt><dd></dd>
-				<dt class="week1">align-self-center</dt><dd></dd>
-				<dt class="week1">bg-primary</dt><dd></dd>
-				<dt class="week2">breadcrumb</dt><dd></dd>
-				<dt class="week2">breadcrumb-item</dt><dd></dd>
-				<dt class="week2">btn-group</dt><dd></dd>
-				<dt class="week1">col</dt><dd></dd>
-				<dt class="week1">col-12</dt><dd></dd>
-				<dt class="week1">col-auto</dt><dd></dd>
-				<dt class="week1">col-md</dt><dd></dd>
-				<dt class="week1">col-md-3</dt><dd></dd>
-				<dt class="week1">col-sm-6</dt><dd></dd>
-				<dt class="week2">collapse</dt><dd></dd>
-				<dt class="week1">container</dt><dd></dd>
-				<dt class="week1">d-none</dt><dd></dd>
-				<dt class="week1">d-sm-block</dt><dd></dd>
-				<dt class="week2">fixed-top</dt><dd></dd>
-				<dt class="week1">footer</dt><dd></dd>
-				<dt class="week1">jumbotron</dt><dd></dd>
-				<dt class="week1">justify-content-center</dt><dd></dd>
-				<dt class="week1">list-unstyled</dt><dd></dd>
-				<dt class="week2">mr-auto</dt><dd></dd>
-				<dt class="week2">navbar</dt><dd></dd>
-				<dt class="week2">navbar-brand</dt><dd></dd>
-				<dt class="week2">navbar-collapse</dt><dd></dd>
-				<dt class="week2">navbar-dark</dt><dd></dd>
-				<dt class="week2">navbar-expand-sm</dt><dd></dd>
-				<dt class="week2">nav-item</dt><dd></dd>
-				<dt class="week2">nav-link</dt><dd></dd>
-				<dt class="week2">navbar-nav</dt><dd></dd>
-				<dt class="week2">navbar-toggler</dt><dd></dd>
-				<dt class="week2">navbar-toggler-icon</dt><dd></dd>
-				<dt class="week1">offset-1</dt><dd></dd>
-				<dt class="week1">order-sm-first</dt><dd></dd>
-				<dt class="week1">order-sm-last</dt><dd></dd>
-				<dt class="week1">row</dt><dd></dd>
-				<dt class="week1">text-center</dt><dd></dd>
-			</dl>
+			</div>
+			<div class="row col-12">
+				<div class="section-title">bootstrap classes</div>
+				<div class="col-12 row">
+					<dl>
+						<dt class="week2">active</dt><dd></dd>
+						<dt class="week1">align-items-center</dt><dd></dd>
+						<dt class="week1">align-self-center</dt><dd></dd>
+						<dt class="week1">bg-primary</dt><dd></dd>
+						<dt class="week2">breadcrumb</dt><dd></dd>
+						<dt class="week2">breadcrumb-item</dt><dd></dd>
+						<dt class="week2">btn-group</dt><dd></dd>
+						<dt class="week1">col</dt><dd></dd>
+						<dt class="week1">col-12</dt><dd></dd>
+						<dt class="week1">col-auto</dt><dd></dd>
+						<dt class="week1">col-md</dt><dd></dd>
+						<dt class="week1">col-md-3</dt><dd></dd>
+						<dt class="week1">col-sm-6</dt><dd></dd>
+						<dt class="week2">collapse</dt><dd></dd>
+						<dt class="week1">container</dt><dd></dd>
+						<dt class="week1">d-none</dt><dd></dd>
+						<dt class="week1">d-sm-block</dt><dd></dd>
+						<dt class="week2">fixed-top</dt><dd></dd>
+						<dt class="week1">footer</dt><dd></dd>
+						<dt class="week1">jumbotron</dt><dd></dd>
+						<dt class="week1">justify-content-center</dt><dd></dd>
+						<dt class="week1">list-unstyled</dt><dd></dd>
+						<dt class="week2">mr-auto</dt><dd></dd>
+						<dt class="week2">navbar</dt><dd></dd>
+						<dt class="week2">navbar-brand</dt><dd></dd>
+						<dt class="week2">navbar-collapse</dt><dd></dd>
+						<dt class="week2">navbar-dark</dt><dd></dd>
+						<dt class="week2">navbar-expand-sm</dt><dd></dd>
+						<dt class="week2">nav-item</dt><dd></dd>
+						<dt class="week2">nav-link</dt><dd></dd>
+						<dt class="week2">navbar-nav</dt><dd></dd>
+						<dt class="week2">navbar-toggler</dt><dd></dd>
+						<dt class="week2">navbar-toggler-icon</dt><dd></dd>
+						<dt class="week1">offset-1</dt><dd></dd>
+						<dt class="week1">order-sm-first</dt><dd></dd>
+						<dt class="week1">order-sm-last</dt><dd></dd>
+						<dt class="week1">row</dt><dd></dd>
+						<dt class="week1">text-center</dt><dd></dd>
+					</dl>
+				</div>
+			</div>
 		</div>
 	</body>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
