--- a/npm.html
+++ b/npm.html
@@ -11,18 +11,17 @@
 		<title>NPM</title>
 	</head>
 	<body>
-    	<div class="container mt-4">
-    		<div class="row">
-				<div class="col-12 row-content">
-				<h2>NPM</h2>
-			</div>
-    		</div>
+		<div class="container mt-4">
 			<div class="row">
-				<div class="col-12 row-content topic">
-					<h5 >Modules</h5>
+				<div class="col-12 row-content">
+					<div class="page-title">NPM</div>
 				</div>
 			</div>
 			<div class="row">
+				<div class="col-12 row-content">
+					<div class="section-title">Modules</h5>
+					</div>
+				</div>
 				<div class="col-12 row-content">
 					<a href="https://github.com/Qard/onchange" target="_blank" rel="noopener nofollow">onchange</a> - Some module fo something
 					<br>
@@ -44,9 +43,8 @@
 					<br>
 				</div>
 			</div>
-		</div>
-	</body>
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-</html>
+		</body>
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	</html>
