--- a/website-design.html
+++ b/website-design.html
@@ -14,7 +14,9 @@
     </head>
     <body>
     	<div class="container mt-4">
-			<h2>Basic Webpage Design</h2>
+    		<div class="row">
+                <div class="page-title col-12">Basic Webpage Design</div>
+            </div>
 			<h5 class="topic">Information Architecture</h5>
 			<ul>
 				<li>Pages need to be in some sort of a logical hierarchy</li>
