additions to html pages

--- a/how-did-i-fix.html
+++ b/how-did-i-fix.html
@@ -16,7 +16,7 @@
                 <div class="page-title col-12">How did i fix...</div>
             </div>
             <div class="row">
-                <div class="problem-area col-12">
+                <div class="col-12">
                     <div class="section-title">Command Line Problems </div>
                     <div class="problem-list">
                         <div class="problem">
