--- a/bootstrap-cheatsheet.html
+++ b/bootstrap-cheatsheet.html
@@ -15,8 +15,8 @@
 			<div class="page-title row col-12"> Bootstrap Cheatsheet</div>
 			<div class="row  col-6">
 				<div class="section-title">Media Sizes</div>
-				<table class="table">
-					<thead>
+				<table class="table table-striped table-sm">
+					<thead class="thead-dark">
 						<tr>
 							<th scope="col">Size</th>
 							<th scope="col">Screen Size</th>
