--- a/grunt.html
+++ b/grunt.html
@@ -1,58 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<!-- Required meta tags always come first -->
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta http-equiv="x-ua-compatible" content="ie=edge">
-		<!-- Bootstrap CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-		<link rel="stylesheet" href="css/styles.css" type="text/css" >
-		<link rel="stylesheet" href="css/prism.css" type="text/css" />
-		<title>Grunt</title>
-	</head>
-	<body>
-    	<div class="container mt-4">
-    		<div class="row">
-				<div class="col-12 row-content">
-				<h2>Grunt</h2>
-			</div>
-    		</div>
-			<div class="row">
-				<div class="col-12 row-content topic">
-					<h5 >Modules</h5>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-12 row-content">
-					<code>npm install -g grunt-cli</code><br>
-					<code>npm install grunt@1.0.2 --save-dev</code><br>
-					<code>npm install grunt-sass@2.1.0 --save-dev</code><br>
-					<code>npm install time-grunt@1.4.0 --save-dev</code><br>
-					<code>npm install jit-grunt@0.10.0 --save-dev</code><br>
-					<br><br>
-					<pre>
-<code class="language-css line-numbers">@import url(http://fonts.googleapis.com/css?family=Questrial);
-@import url(http://fonts.googleapis.com/css?family=Arvo);
 
-@font-face {
-	src: url(http://lea.verou.me/logo.otf);
-	font-family: 'LeaVerou';
-}
+<head>
+    <!-- Required meta tags always come first -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
+    <link rel="stylesheet" href="css/prism.css" type="text/css" />
+    <title>Grunt</title>
+</head>
 
-/*
-  Shared styles
-*/
-section h1, #features li strong, header h2, footer p {
-	font: 100% Rockwell, Arvo, serif;
-}</code>
-					</pre>
-				</div>
-			</div>
-		</div>
-	</body>
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-	<script src="js/prism.js" type="text/javascript"></script>
+<body>
+    <div class="container mt-4">
+        <div class="row">
+            <div class="page-title col-12">Grunt</div>
+        </div>
+        <div class="row">
+            <div class="col-12 ">
+                <div class="section-title">installation</div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 row-content">
+                <code>npm install -g grunt-cli</code><br>
+                <code>npm install grunt@1.0.2 --save-dev</code><br>
+                <code>npm install grunt-sass@2.1.0 --save-dev</code><br>
+                <code>npm install time-grunt@1.4.0 --save-dev</code><br>
+                <code>npm install jit-grunt@0.10.0 --save-dev</code><br>
+                <br><br>
+            </div>
+        </div>
+    </div>
+</body>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="js/prism.js" type="text/javascript"></script>
+
 </html>
