--- a/npm.html
+++ b/npm.html
@@ -13,16 +13,16 @@
 	<body>
 		<div class="container mt-4">
 			<div class="row">
-				<div class="col-12 row-content">
+				<div class="col-12 ">
 					<div class="page-title">NPM</div>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-12 row-content">
+				<div class="col-12 ">
 					<div class="section-title">Modules</h5>
 					</div>
 				</div>
-				<div class="col-12 row-content">
+				<div class="col-12 ">
 					<a href="https://github.com/Qard/onchange" target="_blank" rel="noopener nofollow">onchange</a> - Some module fo something
 					<br>
 					<a href="https://github.com/keithamus/parallelshell" target="_blank" rel="noopener nofollow">parallelshell</a> - Some module fo something
