--- a/how-did-i-fix.html
+++ b/how-did-i-fix.html
@@ -28,10 +28,22 @@
                             </div>
                         </div>
                         <div class="problem">
-                            <div class="problem-description">problem</div>
-                            <div class="solution">solved doing <br><br>
-                                a, b, c <br><br>
-                                <div class="solution-link"><a href="https://www.google.com">google</a></div>
+                            <div class="problem-description"><pre>/Users/dave/Documents/GitHub/Bootstrap4/conFusion/node_modules/node-sass/lib/binding.js:15
+      throw new Error(errors.missingBinary());</pre></div>
+                            <div class="solution">
+                                <div class="solution-link">This seems to happen when the version of npm or node has been changed.<br>Running the following command: npm rebuild node-sass
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="section-title">Javascript Problems </div>
+                    <div class="problem-list">
+                        <div class="problem">
+                            <div class="problem-description">javascript error Lexical declaration cannot appear in a single-statement context</div>
+                            <div class="solution">I had multiple statements inside an if block, without using curly brackets
+                                <div class="solution-link">See solution on <a href="https://stackoverflow.com/questions/55815772/how-to-fix-lexical-declaration-cannot-appear-in-a-single-statement-context">Stack Overflow</a></div>
                             </div>
                         </div>
                     </div>
