--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
                 <h3 class="section-header">General</h3>
                 <a href="website-design.html">Website Design</a>
                 <a href="npm.html">NPM Resources</a>
-                <a href="grunt.html">Grunt Resources</a>
+                <a href="grunt.html">Grunt</a>
+                <a href="gulp.html">Gulp</a>
+                <a href="react.html">React</a>
                 <a href="prism.html">Prism</a>
             </div>
             <div class="section">
@@ -32,6 +34,10 @@
             <div class="section">
                 <h3 class="section-header">Checklists</h3>
                 <a href="webpage-checklist.html">Web Page Checklist</a>
+            </div>
+            <div class="section">
+                <h3 class="section-header">Graphics</h3>
+                <a href="typography.html">Typography</a>
             </div>
 
             <div class="section">
