--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="css/lightning.css">
+        <link rel="stylesheet" href="css/styles.css">
         <title>Daves Stuff</title>
     </head>
     <body class="d-flex flex-column flex-grow">
@@ -25,6 +26,7 @@
                 <a href="gulp.html">Gulp</a>
                 <a href="react.html">React</a>
                 <a href="prism.html">Prism</a>
+                <a class="inline" href="fusion360Basics.html">Fusion360</a> <a class="inline" href="fusion360Questions.html">Questions</a> <a class="inline" href="fusion360Log.html"> Log</a> <a class="inline" href="fusion360Glossary.html"> Glossary</a>
             </div>
             <div class="section">
                 <h3 class="section-header">Cheat Sheets</h3>
