--- a/website-design.html
+++ b/website-design.html
@@ -45,6 +45,7 @@
             <li>Not too many items</li>
             <li>If hierachy complexity needs it, Breadcrumbs (normally below main navigation) are useful</li>
             <li>If part of a multi step process like airline booking, a wizard guide showing steps and indicating current step </li>
+            <li>It's fine to remove the ugly default focus outline that appears as you tab through a web page, but you should replace it with something you like. See <a href="https://youtu.be/iHEkRIF7zxI?t=771">this video</a> for examples</li>
         </ul>
         Resources
         <ul>
